# Verifynd-News

./: README.md  app.py  config.py  latest_news.json  latest_news.py  main.py  pyproject.toml  sumarize.py  verify.py
models/: news.py  search.py
static/css/: styles.css
static/js/: script.js
templates/: about.html  application_details.html  index.html
utils/: prompts.py  scrape.py  search.py
